--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -10,6 +10,12 @@ body:
           required: true
         - label: I have searched the existing issues
           required: true
+  - type: input
+    attributes:
+      label: Clap Version
+      description: Can be found in Cargo.lock or Cargo.toml of your project (i.e. `grep clap Cargo.lock`). PLEASE DO NOT PUT "latest" HERE, use precise version. Put `master` (or other branch) if you're using the repo directly.
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Describe your use case
