fix(derive)!: Rename `Clap` to `Parser`.
With #2005, we are looking at having 3 primary derive traits, `Clap`,
`Subcommand`, and `Args`.  `Clap` isn't very descriptive, so changing it
to `Parser` since that is the primary role of that trait, with all of
its `*parse*` functions.

--- a/clap_up/Cargo.toml
+++ b/clap_up/Cargo.toml
@@ -6,7 +6,7 @@ authors = [
 	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>",
 	"Clap Maintainers",
 ]
-description = "Automatic code upgrader for Clap"
+description = "Automatic code upgrader for Parser"
 repository = "https://github.com/clap-rs/clap/tree/master/clap_up"
 homepage = "https://clap.rs/"
 keywords = [
