perf: impl opt-out feature "validator"
To allow one to opt out and decrease the binary size if not using  `Arg::validator{_os}`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,7 @@ doc         = ["yaml", "regex"] # All the features which add to documentation
 default_value = []
 default_value_conditional = []
 default_value_missing = []
+validator   = []
 full        = [] # Give me everything
 
 [profile.test]
