--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,18 @@ jobs:
         with:
           command: test
           args: --target ${{ matrix.target }} --features "wrap_help yaml regex"
+      - name: Test Derive
+        uses: actions-rs/cargo@v1
+        if: matrix.features == 'all'
+        with:
+          command: test
+          args: --target ${{ matrix.target }} -p clap_derive
+      - name: Test Generate
+        uses: actions-rs/cargo@v1
+        if: matrix.features == 'all'
+        with:
+          command: test
+          args: --target ${{ matrix.target }} -p clap_generate
       - name: Check debug
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -146,6 +158,18 @@ jobs:
         with:
           command: test
           args: --features "wrap_help yaml regex"
+      - name: Test Derive
+        uses: actions-rs/cargo@v1
+        if: matrix.features == 'all'
+        with:
+          command: test
+          args: -p clap_derive
+      - name: Test Generate
+        uses: actions-rs/cargo@v1
+        if: matrix.features == 'all'
+        with:
+          command: test
+          args: -p clap_generate
       - name: Check debug
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -201,12 +225,12 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --features "wrap_help yaml regex" -- -D warnings
+          args: --all --exclude clap_up --features "wrap_help yaml regex" -- -D warnings
       - name: Format check
         uses: actions-rs/cargo@v1
         with:
           command: fmt
-          args: -- --check
+          args: --all -- --check
   coverage:
     name: Coverage
     continue-on-error: true
