Future proof CI
CI runs the crates in the workspace individually.  Because clap2 is in
our dependency tree, `-p clap` is ambiguous, so we specify
`-p clap:3.0.0-beta.2`.
- As more dependencies adopt other crates, they also become ambiguous
- We have to update this when releasing

So switching to calling crates out by their manifest-path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         if: matrix.features == 'none'
         with:
           command: test
-          args: --target ${{ matrix.target }} --no-default-features --features "std cargo" -p clap:3.0.0-beta.2
+          args: --target ${{ matrix.target }} --no-default-features --features "std cargo" --manifest-path Cargo.toml
       - name: Test all features
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -109,13 +109,13 @@ jobs:
         if: matrix.features == 'all'
         with:
           command: test
-          args: --target ${{ matrix.target }} -p clap_derive
+          args: --target ${{ matrix.target }} --manifest-path clap_derive/Cargo.toml
       - name: Test Generate
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
         with:
           command: test
-          args: --target ${{ matrix.target }} -p clap_generate
+          args: --target ${{ matrix.target }} --manifest-path clap_generate/Cargo.toml
       - name: Check debug
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -151,7 +151,7 @@ jobs:
         if: matrix.features == 'none'
         with:
           command: test
-          args: --no-default-features --features "std cargo" -p clap:3.0.0-beta.2
+          args: --no-default-features --features "std cargo" --manifest-path Cargo.toml
       - name: Test all features
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -163,13 +163,13 @@ jobs:
         if: matrix.features == 'all'
         with:
           command: test
-          args: -p clap_derive
+          args: --manifest-path clap_derive/Cargo.toml
       - name: Test Generate
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
         with:
           command: test
-          args: -p clap_generate
+          args: --manifest-path clap_generate/Cargo.toml
       - name: Check debug
         uses: actions-rs/cargo@v1
         if: matrix.features == 'all'
@@ -220,7 +220,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --no-default-features --features "std cargo" -p clap:3.0.0-beta.2
+          args: --no-default-features --features "std cargo" --manifest-path Cargo.toml
       - name: Clippy for all features
         uses: actions-rs/cargo@v1
         with:
