--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ termcolor = { version = "1.1", optional = true }
 terminal_size = { version = "0.1.12", optional = true }
 lazy_static = { version = "1", optional = true }
 regex = { version = "1.0", optional = true }
+bstr = "0.2.16"
 
 [dev-dependencies]
 regex = "1.0"
