test: Harden tests against trailing whitespace
In a follow up commit, my editor stripped trailing whitespace.  Rather
than have everyone fight this, let's not make a deal over the small
stuff.

--- a/clap_generate/Cargo.toml
+++ b/clap_generate/Cargo.toml
@@ -35,6 +35,7 @@ clap = { path = "../", version = "=3.0.0-beta.4" }
 [dev-dependencies]
 pretty_assertions = "0.7"
 version-sync = "0.9"
+itertools = "0.10"
 
 [features]
 default = []
