Speed up PR feedback
This drops us down to just a handlful of jobs, allowing us full
parallelism (github caps max parallel jobs).  This is dependent on us
using bors to run the "ci" before merging into master.

There is a balance in what to run.  We should consider what is most
likely to break for the widest variety of PRs.  Contributors that expect
an uncovered case to fail can always specify `@bors try`

Motivation
- Mac is similar enough to Linux, we only need to run one of them and
  Linux has more parallel runners on Github.
- Since we deal with `OsStr`, test Windows because its different than
  the others.
- People are most likely to make changes on `stable` and break support
  for MSRV, so we should verify that
- Still test on `stable` to not block feedback if we run into problems
  with dependencies and our MSRV run.
- On the other hand, beta and nightly are less likely to break on an
  individual PR
- Remove benchmarks because most changes are not performance sensitive
  and we aren't looking at the results enough to justify a 30 minute run.

Fixes #2801

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,16 +2,10 @@ name: CI
 on:
   push:
     branches: [master, staging, trying]
-  pull_request:
-    branches: [master]
-    types: [opened, reopened, synchronize]
-concurrency:
-  group: ci-${{ github.ref }}
-  cancel-in-progress: true
 jobs:
   ci:
     name: CI
-    needs: [test, wasm, lint]
+    needs: [test, wasm]
     runs-on: ubuntu-latest
     steps:
       - name: Done
@@ -179,60 +173,3 @@ jobs:
         with:
           command: check
           args: --target ${{ matrix.target }} --features "yaml regex"
-  lint:
-    name: Linting
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install rust
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt, clippy
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Clippy for almost no features
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --no-default-features --features "std cargo" -p clap:3.0.0-beta.4
-      - name: Clippy for all features
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --features "wrap_help yaml regex" -- -D warnings
-      - name: Format check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check
-  coverage:
-    name: Coverage
-    continue-on-error: true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          components: llvm-tools-preview
-          override: true
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install llvm-cov
-        uses: actions-rs/install@v0.1
-        with:
-          crate: cargo-llvm-cov
-          version: 0.1.0-alpha.4
-          use-tool-cache: true
-      - name: Coverage
-        uses: actions-rs/cargo@v1
-        with:
-          command: llvm-cov
-          args: --features "wrap_help yaml regex" --lcov --output-path lcov.info
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          path-to-lcov: lcov.info
-          github-token: ${{ secrets.github_token }}
