fix(ci): Don't have PRs canceling each others jobs
Using `head_ref`, we are making it so PRs are all in the same group.
When a new PR comes in (not just an update), it then cancels all other
PRs.  Switching to `ref` makes it so each PR is in its own concurrency
group.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -4,7 +4,7 @@ on:
     branches: [master]
     types: [opened, reopened, synchronize]
 concurrency:
-  group: benchmark-${{ github.head_ref }}
+  group: benchmark-${{ github.ref }}
   cancel-in-progress: true
 jobs:
   benchmark:
