--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ termcolor = { version = "1.1", optional = true }
 terminal_size = { version = "0.1.12", optional = true }
 lazy_static = { version = "1", optional = true }
 regex = { version = "1.0", optional = true }
+backtrace = { version = "0.3", optional = true }
 
 [dev-dependencies]
 regex = "1.0"
@@ -89,7 +90,7 @@ default = [
 	"suggestions",
 	"unicode_help",
 ]
-debug = ["clap_derive/debug"] # Enables debug messages
+debug = ["clap_derive/debug", "backtrace"] # Enables debug messages
 
 # Used in default
 std = ["indexmap/std"] # support for no_std in a backwards-compatible way
