--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -3,15 +3,14 @@ on:
   push:
     branches: [master]
     paths: ["site/**"]
+concurrency:
+  group: site
+  cancel-in-progress: true
 jobs:
   site:
     name: Deploy site
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel previous builds
-        uses: styfle/cancel-workflow-action@0.9.0
-        with:
-          access_token: ${{ github.token }}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
