fix: Gate App::replace
We are concerned about the level of polish of this feature and are
unsure enough about its future, we've decided to gate it to unblock the
v3 release.

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -41,7 +41,7 @@ jobs:
   test-full:
     name: Tests (Full)
     env:
-      FLAGS: --features 'wrap_help yaml regex'
+      FLAGS: --features 'wrap_help yaml regex unstable-replace'
     strategy:
       fail-fast: false
       matrix:
