--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,9 @@ unicode = ["textwrap/unicode-width", "unicase"]  # Support for unicode character
 wrap_help = ["terminal_size", "textwrap/terminal_size"]
 yaml = ["yaml-rust"]
 
+# In-work features
+unstable-replace = []
+
 [profile.test]
 opt-level = 1
 
@@ -114,7 +117,7 @@ lto = true
 codegen-units = 1
 
 [package.metadata.docs.rs]
-features = ["yaml", "regex"]
+features = ["yaml", "regex", "unstable-replace"]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [workspace]
