--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [master]
   push:
-    branches: [master, staging, trying]
+    branches: [staging, trying]
 concurrency:
   group: lint-${{ github.ref }}
   cancel-in-progress: true
@@ -32,7 +32,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --features "wrap_help yaml regex" -- -D warnings
+          args: --features "wrap_help yaml regex unstable-replace" -- -D warnings
       - name: Format check
         uses: actions-rs/cargo@v1
         with:
