chore(ci): Hopefully speed up CI
Just doing a release build takes ~20m (a release job takes 30-50m!).
I'm hoping this cache will help speed up bors.  We are using this today
with CI-PR pipelines but I'm seeing a lot of cache misses for some
reason, so unsure of the full benefit.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,8 @@ jobs:
           toolchain: ${{ matrix.rust }}
           target: ${{ matrix.target }}
           override: true
+      - name: Cache Builds
+        uses: Swatinem/rust-cache@v1
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install linker
@@ -126,6 +128,8 @@ jobs:
         with:
           toolchain: nightly
           override: true
+      - name: Cache Builds
+        uses: Swatinem/rust-cache@v1
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test almost no features
@@ -166,6 +170,8 @@ jobs:
           toolchain: 1.54.0
           target: ${{ matrix.target }}
           override: true
+      - name: Cache Builds
+        uses: Swatinem/rust-cache@v1
       - name: Checkout
         uses: actions/checkout@v2
       - name: Check
