fixup! Add unstable-multicall flag to CI workflows

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -41,7 +41,7 @@ jobs:
   test-full:
     name: Tests (Full)
     env:
-      FLAGS: --features 'wrap_help yaml regex unstable-replace'
+      FLAGS: --features 'wrap_help yaml regex unstable-replace unstable-multicall'
     strategy:
       fail-fast: false
       matrix:
@@ -80,7 +80,7 @@ jobs:
       - name: Default features
         run: cargo check --all-targets
       - name: All features + Debug
-        run: cargo check --all-targets --features "wrap_help yaml regex unstable-replace debug"
+        run: cargo check --all-targets --features "wrap_help yaml regex unstable-replace unstable-multicall debug"
       - name: No features
         run: cargo check --all-targets --no-default-features --features "std cargo"
       - name: UI Tests
