--- a/clap_generate/Cargo.toml
+++ b/clap_generate/Cargo.toml
@@ -9,6 +9,7 @@ authors = [
 include = [
 	"src/**/*",
 	"Cargo.toml",
+	"LICENSE-*",
 	"README.md"
 ]
 description = "A generator library used with clap for shell completion scripts, manpage, etc."
