--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --features "wrap_help yaml regex unstable-replace unstable-multicall" -- -D warnings
+          args: --features "wrap_help yaml regex unstable-replace unstable-multicall unstable-grouped" -- -D warnings
       - name: Format check
         uses: actions-rs/cargo@v1
         with:
