--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,6 +118,7 @@ yaml = ["yaml-rust"]
 # In-work features
 unstable-replace = []
 unstable-multicall = []
+unstable-grouped = []
 
 [profile.test]
 opt-level = 1
@@ -127,7 +128,7 @@ lto = true
 codegen-units = 1
 
 [package.metadata.docs.rs]
-features = ["yaml", "regex", "unstable-replace", "unstable-multicall"]
+features = ["yaml", "regex", "unstable-replace", "unstable-multicall", "unstable-grouped"]
 targets = ["x86_64-unknown-linux-gnu"]
 
 [workspace]
