--- a/clap_generate/Cargo.toml
+++ b/clap_generate/Cargo.toml
@@ -36,6 +36,7 @@ clap = { path = "../", version = "=3.0.0-beta.5", default-features = false, feat
 [dev-dependencies]
 pretty_assertions = "0.7"
 version-sync = "0.9"
+clap = { path = "../", version = "=3.0.0-beta.5", default-features = false, features = ["std", "derive"] }
 
 [features]
 default = []
